# immersive_pong

./: .gitignore  README.md  app.json  build.gradle.kts  cesconfig.jsonc  gradle.properties  package.json  pnpm-lock.yaml  settings.gradle.kts
.github/workflows/: deploy.yml
AI/: .gitignore  .tf_main.py.kate-swp  main.py  pyproject.toml  requirements.txt  test.py  tf_main.py  torch_main.py
AI/pong_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
App/: settings.gradle.kts
App/androidApp/: build.gradle.kts
App/composeApp/: build.gradle.kts
App/gradle/: libs.versions.toml
App/iosApp/iosApp/: VolumeButtonHandler.swift
App/iosApp/iosApp.xcodeproj/: project.pbxproj
Server/: CLIENT_INTEGRATION.md  README.md  TESTING.md  package.json  pnpm-lock.yaml  server.js  wrangler.toml
Server/.github/workflows/: deploy.yml
androidApp/: build.gradle.kts
composeApp/: build.gradle.kts
flutter/: pubspec.yaml
flutter/lib/: colors.dart  config.dart  main.dart
flutter/linux/: CMakeLists.txt
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter/windows/: CMakeLists.txt
flutter_old/: README.md  pubspec.yaml
flutter_old/lib/: colors.dart  config.dart  logger.dart  main.dart
flutter_old/test/: widget_test.dart
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift
tauri/: package.json  pnpm-lock.yaml
tauri/app/: globals.css  page.tsx
tauri/lib/: config.ts  types.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: commands.rs  lib.rs
(+95 files in other folders)
